--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("css/dpxl.png");
+  background-image: url("dpxl.png");
   background-color: #36393e;
   background-repeat: repeat;
   color: #789496;
