Changed some details

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -50,9 +50,9 @@ body {
 
 #pressform button[type="submit"] {
   cursor: pointer;
-  width: 100%;
+  width: 400px;
   border: none;
-  background: #4CAF50;
+  background: #0FF;
   color: #FFF;
   margin: 0 0 5px;
   padding: 10px;
