--- a/public/css/main.css
+++ b/public/css/main.css
@@ -50,7 +50,7 @@ body {
 
 #pressform button[type="submit"] {
   cursor: pointer;
-  width: 400px;
+  width: 50%;
   border: none;
   background: #0FF;
   color: #FFF;
@@ -60,7 +60,7 @@ body {
 }
 
 #pressform button[type="submit"]:hover {
-  background: #43A047;
+  background: #10b5b6;
   -webkit-transition: background 0.3s ease-in-out;
   -moz-transition: background 0.3s ease-in-out;
   transition: background-color 0.3s ease-in-out;
