--- a/public/css/main.css
+++ b/public/css/main.css
@@ -24,6 +24,33 @@ body {
   margin: 0 auto;
   position: relative;
 }
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333;
+}
+
+li {
+  float: left;
+}
+
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+li a:hover:not(.active) {
+  background-color: #111;
+}
+
+.active {
+  background-color: #a2ac37;
+}
 #pressform input[type="text"],
 #pressform input[type="email"],
 #pressform input[type="tel"],
