--- a/public/pc/css/main.css
+++ b/public/pc/css/main.css
@@ -1,6 +1,6 @@
 body {
   background-image: url("dpxl.png");
-  background-color: #36393e;
+  background-color: #39404a;
   background-repeat: repeat;
   color: #789496;
   width: 75%;
